// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render() renders correctly for class components 1`] = `
<div>
  test class content
</div>
`;

exports[`#render() renders correctly for components with controlled props 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={true}
    onChange={[Function]}
  />
</div>
`;

exports[`#render() renders correctly for components with controlled props with a database 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={false}
    onChange={[Function]}
    value="testStore/0"
  />
</div>
`;

exports[`#render() renders correctly for function components 1`] = `
<div>
  test function content
</div>
`;

exports[`#render() renders correctly for intrinsic elements 1`] = `
<img
  src="test.png"
/>
`;
